[project]
name = "musakbrainz"
version = "0.1.0"
description = ""
authors = [
    {name = "Jack Danger",email = "github@jackdanger.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "musicbrainzngs (>=0.7.1,<0.8.0)",
    "mutagen (>=1.47.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
